--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,19 +2,36 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-}
 
-
-.form .gamefield .players {
+.formDiv, .gamefield {
     display: flex;
     justify-content: center;
 }
 
+.form {
+    text-align: center;
+}
 
-.title {
+.information {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.float-child {
+    width: 50%;
+    float: left;
+}  
+
+.logs {
+    text-align: center;
+}
+
+#role {
+    text-align: center;
+}
+
+.roomName {
     display: flex;
     justify-content: center;
     text-align: center;
